--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                      <li class="list-group-item">
         <a href="profile-edit.html">profile-edit</a>
       </li>
+                           <li class="list-group-item">
+        <a href="smardylist.html">smardylist</a>
+      </li>
+      
     </ul> 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
