--- a/pickasubject.html
+++ b/pickasubject.html
@@ -47,7 +47,7 @@
               <a class="btn-subject phy phy-25" href="#">
                 <span class="icon-phy icon-cus"></span>
                 <span class="title-sub">H1 Physics</span>
-                <span class="topic-subject math-view-75 math-star-1"></span>
+                <span class="topic-subject phy-view-75 phy-star-1"></span>
               </a>
               <a class="btn-subject more-btn" href="#">
                 <span class="title-sub">more subjescts</span>
