--- a/ranking.html
+++ b/ranking.html
@@ -34,8 +34,11 @@
         </header>
 
         <article class="main">
-            <article class="min-800px container">
+            <article class="min-800px container ranking">
+              <h3>H2 Maths</h3>
+              <span class="header-ranking">You are currently ranked at <b>300</b><ins>th</ins></span>
             <article class="ranking-li">
+              <number>1</number>
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
@@ -50,6 +53,7 @@
 
             </article>
             <article class="ranking-li">
+              <number>2</number>
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
@@ -64,6 +68,7 @@
 
             </article>
             <article class="ranking-li">
+              <number>3</number>
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
@@ -78,6 +83,7 @@
 
             </article>
             <article class="ranking-li">
+              <number>4</number>
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
@@ -94,28 +100,6 @@
             </article>
         </article>
       </section>
-      <footer>
-        <article class="friend-list-footer">
-        <article class="footer-left">
-          <span>
-            <i class="footer-icon smardy-icon"></i>
-            smardy
-          </span>
-        </article>
-        <article class="footer-center">
-          <span>
-            <i class="footer-icon face-icon"></i>
-            facebook
-          </span>
-        </article>
-                <article class="footer-right">
-          <span>
-           <i class="footer-icon contact-icon"></i>
-            contact
-          </span>
-        </article>
-        </article>
-      </footer>
     </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
