--- a/difficulty.html
+++ b/difficulty.html
@@ -30,7 +30,7 @@
         </header>
 
         <article class="main">
-            <article class="container">
+            <article class="container min-800px ">
                <h4>Set your own level of difficulty</h4>
                <ul>
                   <li>
