--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
         <a href="message.html">message</a>
       </li>
                      <li class="list-group-item">
+        <a href="historybytopic.html">historybytopic</a>
+      </li>
+                     <li class="list-group-item">
+        <a href="historybydate-time.html">historybydate-time</a>
+      </li>
+                     <li class="list-group-item">
         <a href="profile-edit.html">profile-edit</a>
       </li>
                            <li class="list-group-item">
