update link index page

--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
                <li class="list-group-item">
         <a href="message.html">message</a>
       </li>
+               
                      <li class="list-group-item">
-        <a href="historybytopic.html">historybytopic</a>
-      </li>
-                     <li class="list-group-item">
-        <a href="historybydate-time.html">historybydate-time</a>
+        <a href="historybydate-time.html">history</a>
       </li>
                      <li class="list-group-item">
         <a href="profile-edit.html">profile-edit</a>
