--- a/discussionthreaddetail.html
+++ b/discussionthreaddetail.html
@@ -132,7 +132,7 @@
       <footer class="form-cus container">
         <article class="disscus-footer-chat">
           <input  type="text" placeholder="Tap To Type">
-          <a style="padding:0px" class="col-xs-2" href="#" class="send">Send</a>
+          <a style="padding:0px" class="col-xs-2 send" href="#" >Send</a>
         </article>
 
       </footer>
