--- a/friendlist.html
+++ b/friendlist.html
@@ -50,33 +50,33 @@
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
-                <big>Vietnam</big>
+                <span>Vietnam</span>
               </span>
-              <a href="#" btn-invite>Invite</a>
+              <a href="#" class="btn-invite">Invite</a>
             </article>
             <article class="friend-li">
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
-                <big>Vietnam</big>
+                <span>Vietnam</span>
               </span>
-              <a href="#" btn-invite>Invite</a>
+              <a href="#" class="btn-invite">Invite</a>
             </article>
             <article class="friend-li">
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
-                <big>Vietnam</big>
+                <span>Vietnam</span>
               </span>
-              <a href="#" btn-invite>Invite</a>
+              <a href="#" class="btn-invite">Invite</a>
             </article>
             <article class="friend-li">
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
-                <big>Vietnam</big>
+                <span>Vietnam</span>
               </span>
-              <a href="#" btn-invite>Invite</a>
+              <a href="#" class="btn-invite">Invite</a>
             </article>
             </article>
         </article>
