--- a/message.html
+++ b/message.html
@@ -44,7 +44,7 @@
 
               <article id="messages-top">
                   <a class="btn-subject messages-btn" href="#">
-                  <span class="icon-avatar"><img src="images/avatar-mes.png"></span>
+                  <span class="icon-avatar"><img src="images/avatar-mes.png" alt="images"/></span>
                   <article class="mess-info">
                     <span class="title-messages-btn status-mes">Keith</span>
                     <span class="des-messages-btn">Lorem ipsum dolor sit amet</span>
@@ -52,7 +52,7 @@
                    <span class="mes-ico count-mes">5</span>
                   </a>
                   <a class="btn-subject messages-btn" href="#">
-                  <span class="icon-avatar"><img src="images/avatar-mes.png"></span>
+                  <span class="icon-avatar"><img src="images/avatar-mes.png" alt="hello"/></span>
                   <article class="mess-info">
                     <span class="title-messages-btn status-mes">Keith</span>
                     <span class="des-messages-btn">Lorem ipsum dolor sit amet</span>
@@ -60,7 +60,7 @@
                    <span class="mes-ico count-mes">12</span>
                   </a>
                   <a class="btn-subject messages-btn" href="#">
-                  <span class="icon-avatar"><img src="images/avatar-mes.png"></span>
+                  <span class="icon-avatar"><img src="images/avatar-mes.png" alt="iamges"/></span>
                   <article class="mess-info">
                     <span class="title-messages-btn">Keith</span>
                     <span class="des-messages-btn">Lorem ipsum dolor sit amet</span>
