--- a/pickasubject.html
+++ b/pickasubject.html
@@ -34,7 +34,7 @@
         </article>
         <article class="main">
             <article class="container">
-              <h3 class="title-main">A Level<h3>
+              <h3 class="title-main">A Level</h3>
               <a class="btn-subject math math-25" href="#">
                 <span class="icon-math icon-cus"></span>
                 <span class="title-sub">H1 Math</span>
@@ -52,7 +52,7 @@
               <a class="btn-subject more-btn" href="#">
                 <span class="title-sub">more subjescts</span>
               </a>
-              <h3 class="title-main">O Level<h3>
+              <h3 class="title-main">O Level</h3>
               <a class="btn-subject math" href="#">
                 <span class="icon-math icon-cus"></span>
                 <span class="title-sub">Additional Maths</span>
