--- a/profile-edit.html
+++ b/profile-edit.html
@@ -61,7 +61,7 @@
             
         <article class="profile-edit">
           <header class="text-center">
-              <img src="images/avatar.png">
+              <img src="images/avatar.png" alt="iamges"/>
               <span id="edit-photo"><a href="#"><i class="icon-edit-photo"></i>Edit Photo</a></span>
               <span id="edit-wallpaper"><a href="#"><i class="icon-edit-wallpaper"></i>Edit Wallpaper</a></span>
           </header>
