--- a/profile.html
+++ b/profile.html
@@ -62,7 +62,7 @@
             
         <article class="profile-details">
           <header class="text-center">
-              <img src="images/avatar.png">
+              <img src="images/avatar.png" alt="logo"/>
               <h3>Lam Nguyen</h3>
               <span id="edit-profile"><a href="#"><i class="icon-edit-profile"></i>Edit Profile</a></span>
           </header>
