--- a/ranking.html
+++ b/ranking.html
@@ -38,11 +38,11 @@
               <h3>H2 Maths</h3>
               <span class="header-ranking">You are currently ranked at <b>300</b><ins>th</ins></span>
             <article class="ranking-li">
-              <number>1</number>
+               <span class="number">1</span>
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
-                <big>Vietnam</big>
+                 <span class="big">Vietnam</span>
               </span>
               <button class="btn-ranking">650</button>
               <button class="ranking-list-smardy">
@@ -53,11 +53,11 @@
 
             </article>
             <article class="ranking-li">
-              <number>2</number>
+              <span class="number">2</span>
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
-                <big>Vietnam</big>
+                <span class="big">Vietnam</span>
               </span>
               <button class="btn-ranking">650</button>
               <button class="ranking-list-smardy">
@@ -68,11 +68,11 @@
 
             </article>
             <article class="ranking-li">
-              <number>3</number>
+              <span class="number">3</span>
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
-                <big>Vietnam</big>
+                <span class="big">Vietnam</span>
               </span>
               <button class="btn-ranking">650</button>
               <button class="ranking-list-smardy">
@@ -83,11 +83,11 @@
 
             </article>
             <article class="ranking-li">
-              <number>4</number>
+               <span class="number">4</span>
               <img src="images/avatar.png" alt="friend">
               <span>
                 Lam Nguyen<br>
-                <big>Vietnam</big>
+                <span class="big">Vietnam</span>
               </span>
               <button class="btn-ranking">650</button>
               <button class="ranking-list-smardy">
