--- a/historybydate-time.html
+++ b/historybydate-time.html
@@ -71,9 +71,9 @@
         <article class="main">
             <article class="container min-800px thread-discussion-main">
             <article class="width-670px">
-                <a class="btn-subject  dropdown-history" data-id="1" href="#">
+                <a class="btn-subject  dropdown-history" data-tog="1" href="#">
                   <span class="title-history-list">H2 Maths </span>
-                  <span class="title-history-des">Sequence and Series: Introduction to Seq..</span>
+                  <span class="title-history-des">Sequence and Series: Introduction..</span>
                   <span class="topic-history list"></span>
                   <span class="topic-history-time">Attempted on 30 March, 2015.  <time>09:15</time></span>
 
@@ -83,9 +83,9 @@
                      <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                   </article>
   
-                <a data-id="2" class="btn-subject  dropdown-history" href="#">
+                <a data-tog="2" class="btn-subject  dropdown-history" href="#">
                   <span class="title-history-list">H2 Maths </span>
-                  <span class="title-history-des">Sequence and Series: Introduction to Seq..</span>
+                  <span class="title-history-des">Sequence and Series: Introduction..</span>
                   <span class="topic-history list"></span>
                   <span class="topic-history-time">Attempted on 30 March, 2015.  <time>09:15</time></span>
 
@@ -94,9 +94,9 @@
                     <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                      <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                   </article>
-                <a data-id="3" class="btn-subject  dropdown-history" data-id='1' href="#">
+                <a data-tog="3" class="btn-subject  dropdown-history" href="#">
                   <span class="title-history-list">H2 Maths </span>
-                  <span class="title-history-des">Sequence and Series: Introduction to Seq..</span>
+                  <span class="title-history-des">Sequence and Series: Introduction..</span>
                   <span class="topic-history list"></span>
                   <span class="topic-history-time">Attempted on 30 March, 2015.  <time>09:15</time></span>
 
@@ -105,9 +105,9 @@
                     <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                      <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                   </article>
-                 <a data-id="4" class="btn-subject  dropdown-history" href="#">
+                 <a data-tog="4" class="btn-subject  dropdown-history" href="#">
                   <span class="title-history-list">H2 Maths </span>
-                  <span class="title-history-des">Sequence and Series: Introduction to Seq..</span>
+                  <span class="title-history-des">Sequence and Series: Introduction..</span>
                   <span class="topic-history list"></span>
                   <span class="topic-history-time">Attempted on 30 March, 2015.  <time>09:15</time></span>
 
@@ -118,7 +118,7 @@
                   </article>                         
                 <a class="btn-subject  dropdown-history" data-id="5" href="#">
                   <span class="title-history-list">H2 Maths </span>
-                  <span class="title-history-des">Sequence and Series: Introduction to Seq..</span>
+                  <span class="title-history-des">Sequence and Series: Introduction..</span>
                   <span class="topic-history list"></span>
                   <span class="topic-history-time">Attempted on 30 March, 2015.  <time>09:15</time></span>
 
@@ -128,9 +128,9 @@
                      <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                   </article>
   
-                <a data-id="6" class="btn-subject  dropdown-history" href="#">
+                <a data-tog="6" class="btn-subject  dropdown-history" href="#">
                   <span class="title-history-list">H2 Maths </span>
-                  <span class="title-history-des">Sequence and Series: Introduction to Seq..</span>
+                  <span class="title-history-des">Sequence and Series: Introduction..</span>
                   <span class="topic-history list"></span>
                   <span class="topic-history-time">Attempted on 30 March, 2015.  <time>09:15</time></span>
 
@@ -139,9 +139,9 @@
                     <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                      <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                   </article>
-                <a data-id="7" class="btn-subject  dropdown-history" data-id='1' href="#">
+                <a data-tog="7" class="btn-subject  dropdown-history" data-id='1' href="#">
                   <span class="title-history-list">H2 Maths </span>
-                  <span class="title-history-des">Sequence and Series: Introduction to Seq..</span>
+                  <span class="title-history-des">Sequence and Series: Introduction..</span>
                   <span class="topic-history list"></span>
                   <span class="topic-history-time">Attempted on 30 March, 2015.  <time>09:15</time></span>
 
@@ -150,9 +150,9 @@
                     <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                      <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                   </article>
-                 <a data-id="8" class="btn-subject  dropdown-history" href="#">
+                 <a data-tog="8" class="btn-subject  dropdown-history" href="#">
                   <span class="title-history-list">H2 Maths </span>
-                  <span class="title-history-des">Sequence and Series: Introduction to Seq..</span>
+                  <span class="title-history-des">Sequence and Series: Introduction..</span>
                   <span class="topic-history list"></span>
                   <span class="topic-history-time">Attempted on 30 March, 2015.  <time>09:15</time></span>
 
@@ -161,7 +161,7 @@
                     <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                      <a class="btn-subject mini  dropdown-history" href="#">Subtopic 1 </a>
                   </article>                         
-
+            </article>
             </article>
         </article>
       </section>
@@ -196,15 +196,10 @@
 
 $(".dropdown-history").on("click", function(e){
   e.preventDefault()
-  id=$(this).attr('data-id')
+  id=$(this).attr('data-tog')
    $(this).toggleClass('activechange').siblings().removeClass('activechange')
    $("#"+id).slideToggle()
 
-   // var abc= $(this).find('.topic-history')
-   //  $(".history-drop").slideToggle('slow',function(){
-   //    abc.addClass('activechange')
-   //  });
-   //  return false;
     
 })
         
