--- a/messagedetails.html
+++ b/messagedetails.html
@@ -36,35 +36,35 @@
 
         <article class="main">
             <article class="min-800px container">
-              <span class="time-msg text-center"><time>12/6/2015 - 17:11</time></span>
+              <span class="time-msg text-center"><span class="time-a">12/6/2015 - 17:11</span></span>
               <span class="line"></span>
                 <article class="message-details friend-message">
-                  <img class="friend-active" src="images/avatar-mes.png">
+                  <img class="friend-active" src="images/avatar-mes.png" alt="images"/>
                   <article class="chat-mess">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                   </article>
 
                 </article>
-                <span class="time-msg text-center"><time>12/6/2015 - 17:11</time></span>
+                <span class="time-msg text-center"><span class="time-a">12/6/2015 - 17:11</span></span>
                  <span class="line"></span>
                 <article class="message-details me-message">
-                  <img class="me-active" src="images/avatar-mes.png">
+                  <img class="me-active" src="images/avatar-mes.png" alt="images" />
                   <article class="chat-mess">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit
                   </article>
 
                 </article>
                 <article class="message-details me-message">
-                  <img class="me-active" src="images/avatar-mes.png">
+                  <img class="me-active" src="images/avatar-mes.png" alt="images" />
                   <article class="chat-mess">
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   </article>
 
                 </article>
-                <span class="time-msg text-center"><time>12/6/2015 - 17:11</time></span>
+                <span class="time-msg text-center"><span class="time-a">12/6/2015 - 17:11</span></span>
                  <span class="line"></span>
                 <article class="message-details friend-message">
-                  <img class="friend-active" src="images/avatar-mes.png">
+                  <img class="friend-active" src="images/avatar-mes.png" alt="images" />
                   <article class="chat-mess">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                   </article>
